[package]
name = "sc-client-api"
version = "9.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate client interfaces."
documentation = "https://docs.rs/sc-client-api"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
fnv = "1.0.6"
futures = "0.3.21"
log = "0.4.17"
parking_lot = "0.12.1"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.11.0", path = "../../utils/prometheus" }
sc-executor = { version = "0.13.0", path = "../executor" }
sc-transaction-pool-api = { version = "9.0.0", path = "../transaction-pool/api" }
sc-utils = { version = "4.0.0", path = "../utils" }
sp-api = { version = "7.0.0", path = "../../primitives/api" }
sp-blockchain = { version = "9.0.0", path = "../../primitives/blockchain" }
sp-consensus = { version = "0.13.0", path = "../../primitives/consensus/common" }
sp-core = { version = "10.0.0", default-features = false, path = "../../primitives/core" }
sp-database = { version = "4.0.0", path = "../../primitives/database" }
sp-externalities = { version = "0.15.0", path = "../../primitives/externalities" }
sp-keystore = { version = "0.16.0", default-features = false, path = "../../primitives/keystore" }
sp-runtime = { version = "11.0.0", default-features = false, path = "../../primitives/runtime" }
sp-state-machine = { version = "0.16.0", path = "../../primitives/state-machine" }
sp-storage = { version = "9.0.0", path = "../../primitives/storage" }

[dev-dependencies]
thiserror = "1.0.30"
sp-test-primitives = { version = "2.0.0", path = "../../primitives/test-primitives" }
substrate-test-runtime = { version = "2.0.0", path = "../../test-utils/runtime" }
