[package]
name = "sc-basic-authorship"
version = "0.16.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Basic implementation of block-authoring logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
futures = "0.3.21"
futures-timer = "3.0.1"
log = "0.4.17"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.11.0", path = "../../utils/prometheus" }
sc-block-builder = { version = "0.15.0", path = "../block-builder" }
sc-client-api = { version = "9.0.0", path = "../api" }
sc-proposer-metrics = { version = "0.11.0", path = "../proposer-metrics" }
sc-telemetry = { version = "5.0.0", path = "../telemetry" }
sc-transaction-pool-api = { version = "9.0.0", path = "../../client/transaction-pool/api" }
sp-api = { version = "7.0.0", path = "../../primitives/api" }
sp-blockchain = { version = "9.0.0", path = "../../primitives/blockchain" }
sp-consensus = { version = "0.13.0", path = "../../primitives/consensus/common" }
sp-core = { version = "10.0.0", path = "../../primitives/core" }
sp-inherents = { version = "7.0.0", path = "../../primitives/inherents" }
sp-runtime = { version = "11.0.0", path = "../../primitives/runtime" }

[dev-dependencies]
parking_lot = "0.12.1"
sc-transaction-pool = { version = "10.0.0", path = "../transaction-pool" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
