[package]
name = "beefy-gadget"
version = "10.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/substrate"
description = "BEEFY Client gadget for substrate"
homepage = "https://substrate.io"

[dependencies]
array-bytes = "4.1"
async-trait = "0.1.57"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
fnv = "1.0.6"
futures = "0.3"
log = "0.4"
parking_lot = "0.12.1"
thiserror = "1.0"
wasm-timer = "0.2.5"
beefy-primitives = { version = "7.0.0", path = "../../primitives/beefy", package = "sp-beefy" }
prometheus = { package = "substrate-prometheus-endpoint", version = "0.11.0", path = "../../utils/prometheus" }
sc-client-api = { version = "9.0.0", path = "../api" }
sc-consensus = { version = "0.15.0", path = "../consensus/common" }
sc-keystore = { version = "7.0.0", path = "../keystore" }
sc-network = { version = "0.16.0", path = "../network" }
sc-network-common = { version = "0.15.0", path = "../network/common" }
sc-network-gossip = { version = "0.16.0", path = "../network-gossip" }
sc-utils = { version = "4.0.0", path = "../utils" }
sp-api = { version = "7.0.0", path = "../../primitives/api" }
sp-application-crypto = { version = "11.0.0", path = "../../primitives/application-crypto" }
sp-arithmetic = { version = "8.0.0", path = "../../primitives/arithmetic" }
sp-blockchain = { version = "9.0.0", path = "../../primitives/blockchain" }
sp-consensus = { version = "0.13.0", path = "../../primitives/consensus/common" }
sp-core = { version = "10.0.0", path = "../../primitives/core" }
sp-keystore = { version = "0.16.0", path = "../../primitives/keystore" }
sp-mmr-primitives = { version = "7.0.0", path = "../../primitives/merkle-mountain-range" }
sp-runtime = { version = "11.0.0", path = "../../primitives/runtime" }

[dev-dependencies]
serde = "1.0.136"
strum = { version = "0.24.1", features = ["derive"] }
tempfile = "3.1.0"
tokio = "1.22.0"
sc-block-builder = { version = "0.15.0", path = "../block-builder" }
sc-network-test = { version = "0.8.0", path = "../network/test" }
sp-finality-grandpa = { version = "7.0.0", path = "../../primitives/finality-grandpa" }
sp-keyring = { version = "11.0.0", path = "../../primitives/keyring" }
sp-tracing = { version = "7.0.0", path = "../../primitives/tracing" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
