[package]
name = "sc-chain-spec"
version = "9.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate chain configurations."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
memmap2 = "0.5.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.85"
sc-chain-spec-derive = { version = "4.0.0", path = "./derive" }
sc-network-common = { version = "0.15.0", path = "../network/common" }
sc-telemetry = { version = "5.0.0", path = "../telemetry" }
sp-core = { version = "10.0.0", path = "../../primitives/core" }
sp-runtime = { version = "11.0.0", path = "../../primitives/runtime" }
