[package]
name = "sc-informant"
version = "0.15.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate informant."
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ansi_term = "0.12.1"
futures = "0.3.21"
futures-timer = "3.0.1"
log = "0.4.17"
sc-client-api = { version = "9.0.0", path = "../api" }
sc-network-common = { version = "0.15.0", path = "../network/common" }
sp-blockchain = { version = "9.0.0", path = "../../primitives/blockchain" }
sp-runtime = { version = "11.0.0", path = "../../primitives/runtime" }
