[package]
name = "sc-rpc-api"
version = "0.15.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate RPC interfaces."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0"
sc-chain-spec = { version = "9.0.0", path = "../chain-spec" }
sc-transaction-pool-api = { version = "9.0.0", path = "../transaction-pool/api" }
sp-core = { version = "10.0.0", path = "../../primitives/core" }
sp-rpc = { version = "9.0.0", path = "../../primitives/rpc" }
sp-runtime = { version = "11.0.0", path = "../../primitives/runtime" }
sp-version = { version = "9.0.0", path = "../../primitives/version" }
jsonrpsee = { version = "0.16.2", features = ["server", "client-core", "macros"] }
