[package]
name = "sc-sync-state-rpc"
version = "0.16.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "A RPC handler to create sync states for light clients."
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.30"
sc-chain-spec = { version = "9.0.0", path = "../chain-spec" }
sc-client-api = { version = "9.0.0", path = "../api" }
sc-consensus-babe = { version = "0.16.0", path = "../consensus/babe" }
sc-consensus-epochs = { version = "0.15.0", path = "../consensus/epochs" }
sc-finality-grandpa = { version = "0.16.0", path = "../finality-grandpa" }
sp-blockchain = { version = "9.0.0", path = "../../primitives/blockchain" }
sp-runtime = { version = "11.0.0", path = "../../primitives/runtime" }
