[package]
name = "sc-transaction-pool"
version = "10.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Substrate transaction pool implementation."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1.57"
codec = { package = "parity-scale-codec", version = "3.0.0" }
futures = "0.3.21"
futures-timer = "3.0.2"
linked-hash-map = "0.5.4"
log = "0.4.17"
parking_lot = "0.12.1"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.11.0", path = "../../utils/prometheus" }
sc-client-api = { version = "9.0.0", path = "../api" }
sc-transaction-pool-api = { version = "9.0.0", path = "./api" }
sc-utils = { version = "4.0.0", path = "../utils" }
sp-api = { version = "7.0.0", path = "../../primitives/api" }
sp-blockchain = { version = "9.0.0", path = "../../primitives/blockchain" }
sp-core = { version = "10.0.0", path = "../../primitives/core" }
sp-runtime = { version = "11.0.0", path = "../../primitives/runtime" }
sp-tracing = { version = "7.0.0", path = "../../primitives/tracing" }
sp-transaction-pool = { version = "7.0.0", path = "../../primitives/transaction-pool" }

[dev-dependencies]
array-bytes = "4.1"
assert_matches = "1.3.0"
criterion = "0.3"
sc-block-builder = { version = "0.15.0", path = "../block-builder" }
sp-consensus = { version = "0.13.0", path = "../../primitives/consensus/common" }
substrate-test-runtime = { version = "2.0.0", path = "../../test-utils/runtime" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../test-utils/runtime/client" }
substrate-test-runtime-transaction-pool = { version = "2.0.0", path = "../../test-utils/runtime/transaction-pool" }

[[bench]]
name = "basics"
harness = false
