[package]
name = "pallet-indices"
version = "9.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME indices management pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "9.0.0", default-features = false, optional = true, path = "../benchmarking" }
frame-support = { version = "9.0.0", default-features = false, path = "../support" }
frame-system = { version = "9.0.0", default-features = false, path = "../system" }
sp-core = { version = "10.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "11.0.0", default-features = false, path = "../../primitives/io" }
sp-keyring = { version = "11.0.0", optional = true, path = "../../primitives/keyring" }
sp-runtime = { version = "11.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "6.0.0", default-features = false, path = "../../primitives/std" }

[dev-dependencies]
pallet-balances = { version = "9.0.0", path = "../balances" }

[features]
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keyring",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
