[package]
name = "pallet-state-trie-migration"
version = "11.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet migration of trie"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.133", optional = true }
thousands = { version = "0.2.0", optional = true }
zstd = { version = "0.11.2", default-features = false, optional = true }
frame-benchmarking = { default-features = false, optional = true, path = "../benchmarking" , version = "9.0.0" }
frame-support = { default-features = false, path = "../support" , version = "9.0.0" }
frame-system = { default-features = false, path = "../system" , version = "9.0.0" }
remote-externalities = { optional = true, path = "../../utils/frame/remote-externalities", package = "frame-remote-externalities" , version = "0.17.0" }
sp-core = { default-features = false, path = "../../primitives/core" , version = "10.0.0" }
sp-io = { default-features = false, path = "../../primitives/io" , version = "11.0.0" }
sp-runtime = { default-features = false, path = "../../primitives/runtime" , version = "11.0.0" }
sp-std = { default-features = false, path = "../../primitives/std" , version = "6.0.0" }
substrate-state-trie-migration-rpc = { optional = true, path = "../../utils/frame/rpc/state-trie-migration-rpc" , version = "9.0.0" }

[dev-dependencies]
parking_lot = "0.12.1"
tokio = { version = "1.22.0", features = ["macros"] }
pallet-balances = { path = "../balances" , version = "9.0.0" }
sp-tracing = { path = "../../primitives/tracing" , version = "7.0.0" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
remote-test = [ "remote-externalities", "serde", "std", "substrate-state-trie-migration-rpc", "thousands", "zstd" ]
