[package]
name = "pallet-tips"
version = "9.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet to manage tips"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"], optional = true }
frame-benchmarking = { version = "9.0.0", default-features = false, optional = true, path = "../benchmarking" }
frame-support = { version = "9.0.0", default-features = false, path = "../support" }
frame-system = { version = "9.0.0", default-features = false, path = "../system" }
pallet-treasury = { version = "9.0.0", default-features = false, path = "../treasury" }
sp-core = { version = "10.0.0", default-features = false, path = "../../primitives/core" }
sp-io = { version = "11.0.0", default-features = false, path = "../../primitives/io" }
sp-runtime = { version = "11.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "6.0.0", default-features = false, path = "../../primitives/std" }

[dev-dependencies]
pallet-balances = { version = "9.0.0", path = "../balances" }
sp-storage = { version = "9.0.0", path = "../../primitives/storage" }

[features]
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-treasury/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
