[package]
description = "Substrate offchain workers primitives"
name = "sp-offchain"
version = "7.0.0"
license = "Apache-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-api = { version = "7.0.0", default-features = false, path = "../api" }
sp-core = { version = "10.0.0", default-features = false, path = "../core" }
sp-runtime = { version = "11.0.0", default-features = false, path = "../runtime" }

[features]
default = ["std"]
std = ["sp-api/std", "sp-core/std", "sp-runtime/std"]
