[package]
name = "sp-session"
version = "8.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Primitives for sessions"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-api = { version = "7.0.0", default-features = false, path = "../api" }
sp-core = { version = "10.0.0", default-features = false, path = "../core" }
sp-runtime = { version = "11.0.0", optional = true, path = "../runtime" }
sp-staking = { version = "7.0.0", default-features = false, path = "../staking" }
sp-std = { version = "6.0.0", default-features = false, path = "../std" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
]
