[package]
name = "beefy-gadget-rpc"
version = "11.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/substrate"
description = "RPC for the BEEFY Client gadget for substrate"
homepage = "https://substrate.io"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
futures = "0.3.21"
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }
log = "0.4"
parking_lot = "0.12.1"
serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0"
beefy-gadget = { version = "10.0.0", path = "../." }
beefy-primitives = { version = "7.0.0", path = "../../../primitives/beefy", package = "sp-beefy" }
sc-rpc = { version = "11.0.0", path = "../../rpc" }
sp-core = { version = "10.0.0", path = "../../../primitives/core" }
sp-runtime = { version = "11.0.0", path = "../../../primitives/runtime" }

[dev-dependencies]
serde_json = "1.0.85"
sc-rpc = { version = "11.0.0", features = [
	"test-helpers",
], path = "../../rpc" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
tokio = { version = "1.22.0", features = ["macros"] }
