[package]
name = "sc-consensus"
version = "0.15.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Collection of common consensus specific imlementations for Substrate (client)"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1.57"
futures = { version = "0.3.21", features = ["thread-pool"] }
futures-timer = "3.0.1"
libp2p = { version = "0.49.0", default-features = false }
log = "0.4.17"
mockall = "0.11.2"
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.30"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.11.0", path = "../../../utils/prometheus" }
sc-client-api = { version = "9.0.0", path = "../../api" }
sc-utils = { version = "4.0.0", path = "../../utils" }
sp-api = { version = "7.0.0", path = "../../../primitives/api" }
sp-blockchain = { version = "9.0.0", path = "../../../primitives/blockchain" }
sp-consensus = { version = "0.13.0", path = "../../../primitives/consensus/common" }
sp-core = { version = "10.0.0", path = "../../../primitives/core" }
sp-runtime = { version = "11.0.0", path = "../../../primitives/runtime" }
sp-state-machine = { version = "0.16.0", path = "../../../primitives/state-machine" }

[dev-dependencies]
sp-test-primitives = { version = "2.0.0", path = "../../../primitives/test-primitives" }
