[package]
name = "sc-consensus-epochs"
version = "0.15.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Generic epochs-based utilities for consensus"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"] }
fork-tree = { version = "4.0.0", path = "../../../utils/fork-tree" }
sc-client-api = { version = "9.0.0", path = "../../api" }
sc-consensus = { version = "0.15.0", path = "../common" }
sp-blockchain = { version = "9.0.0", path = "../../../primitives/blockchain" }
sp-runtime = { version = "11.0.0", path = "../../../primitives/runtime" }
