[package]
name = "sc-consensus-slots"
version = "0.15.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Generic slots-based utilities for consensus"
edition = "2021"
build = "build.rs"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1.57"
codec = { package = "parity-scale-codec", version = "3.0.0" }
futures = "0.3.21"
futures-timer = "3.0.1"
log = "0.4.17"
sc-client-api = { version = "9.0.0", path = "../../api" }
sc-consensus = { version = "0.15.0", path = "../../../client/consensus/common" }
sc-telemetry = { version = "5.0.0", path = "../../telemetry" }
sp-arithmetic = { version = "8.0.0", path = "../../../primitives/arithmetic" }
sp-blockchain = { version = "9.0.0", path = "../../../primitives/blockchain" }
sp-consensus = { version = "0.13.0", path = "../../../primitives/consensus/common" }
sp-consensus-slots = { version = "0.13.0", path = "../../../primitives/consensus/slots" }
sp-core = { version = "10.0.0", path = "../../../primitives/core" }
sp-inherents = { version = "7.0.0", path = "../../../primitives/inherents" }
sp-runtime = { version = "11.0.0", path = "../../../primitives/runtime" }
sp-state-machine = { version = "0.16.0", path = "../../../primitives/state-machine" }

[dev-dependencies]
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
