[package]
name = "sc-consensus-uncles"
version = "0.15.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Generic uncle inclusion utilities for consensus"
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
thiserror = "1.0.30"
sc-client-api = { version = "9.0.0", path = "../../api" }
sp-authorship = { version = "7.0.0", path = "../../../primitives/authorship" }
sp-runtime = { version = "11.0.0", path = "../../../primitives/runtime" }
