[package]
name = "sc-executor-common"
version = "0.12.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "A set of common definitions that are needed for defining execution engines."
documentation = "https://docs.rs/sc-executor-common/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
thiserror = "1.0.30"
wasm-instrument = "0.3"
wasmi = "0.13"
sc-allocator = { version = "6.0.0", path = "../../allocator" }
sp-maybe-compressed-blob = { version = "4.1.0", path = "../../../primitives/maybe-compressed-blob" }
sp-wasm-interface = { version = "8.0.0", path = "../../../primitives/wasm-interface" }

[features]
default = []
