[package]
description = "Substrate network common"
name = "sc-network-common"
version = "0.15.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
documentation = "https://docs.rs/sc-network-sync"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
prost-build = "0.11"

[dependencies]
async-trait = "0.1.57"
bitflags = "1.3.2"
bytes = "1"
codec = { package = "parity-scale-codec", version = "3.0.0", features = [
	"derive",
] }
futures = "0.3.21"
futures-timer = "3.0.2"
libp2p = { version = "0.49.0", features = [ "request-response", "kad" ] }
linked_hash_set = "0.1.3"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.11.0", path = "../../../utils/prometheus" }
smallvec = "1.8.0"
sc-consensus = { version = "0.15.0", path = "../../consensus/common" }
sc-peerset = { version = "5.0.0", path = "../../peerset" }
serde = { version = "1.0.136", features = ["derive"] }
sp-consensus = { version = "0.13.0", path = "../../../primitives/consensus/common" }
sp-finality-grandpa = { version = "7.0.0", path = "../../../primitives/finality-grandpa" }
sp-runtime = { version = "11.0.0", path = "../../../primitives/runtime" }
sp-blockchain = { version = "9.0.0", path = "../../../primitives/blockchain" }
thiserror = "1.0"
