[package]
description = "Integration tests for Substrate network protocol"
name = "sc-network-test"
version = "0.8.0"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
publish = false
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
tokio = "1.22.0"
async-trait = "0.1.57"
futures = "0.3.21"
futures-timer = "3.0.1"
libp2p = { version = "0.49.0", default-features = false }
log = "0.4.17"
parking_lot = "0.12.1"
rand = "0.8.5"
sc-block-builder = { version = "0.15.0", path = "../../block-builder" }
sc-client-api = { version = "9.0.0", path = "../../api" }
sc-consensus = { version = "0.15.0", path = "../../consensus/common" }
sc-network = { version = "0.16.0", path = "../" }
sc-network-common = { version = "0.15.0", path = "../common" }
sc-network-light = { version = "0.15.0", path = "../light" }
sc-network-sync = { version = "0.15.0", path = "../sync" }
sc-service = { version = "0.17.0", default-features = false, features = ["test-helpers"], path = "../../service" }
sp-blockchain = { version = "9.0.0", path = "../../../primitives/blockchain" }
sp-consensus = { version = "0.13.0", path = "../../../primitives/consensus/common" }
sp-consensus-babe = { version = "0.13.0", path = "../../../primitives/consensus/babe" }
sp-core = { version = "10.0.0", path = "../../../primitives/core" }
sp-runtime = { version = "11.0.0", path = "../../../primitives/runtime" }
sp-tracing = { version = "7.0.0", path = "../../../primitives/tracing" }
substrate-test-runtime = { version = "2.0.0", path = "../../../test-utils/runtime" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
