[package]
name = "pallet-transaction-payment-rpc"
version = "11.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "RPC interface for the transaction payment pallet."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }
pallet-transaction-payment-rpc-runtime-api = { version = "9.0.0", path = "./runtime-api" }
sp-api = { version = "7.0.0", path = "../../../primitives/api" }
sp-blockchain = { version = "9.0.0", path = "../../../primitives/blockchain" }
sp-core = { version = "10.0.0", path = "../../../primitives/core" }
sp-rpc = { version = "9.0.0", path = "../../../primitives/rpc" }
sp-runtime = { version = "11.0.0", path = "../../../primitives/runtime" }
sp-weights = { version = "7.0.0", path = "../../../primitives/weights" }
