[package]
name = "sp-consensus"
version = "0.13.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Common utilities for building and using consensus engines in substrate."
documentation = "https://docs.rs/sp-consensus/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1.57"
codec = { package = "parity-scale-codec", version = "3.0.0", features = [
	"derive",
] }
futures = { version = "0.3.21", features = ["thread-pool"] }
log = "0.4.17"
thiserror = "1.0.30"
sp-core = { version = "10.0.0", path = "../../core" }
sp-inherents = { version = "7.0.0", path = "../../inherents" }
sp-runtime = { version = "11.0.0", path = "../../runtime" }
sp-state-machine = { version = "0.16.0", path = "../../state-machine" }
sp-std = { version = "6.0.0", path = "../../std" }
sp-version = { version = "9.0.0", path = "../../version" }

[dev-dependencies]
futures = "0.3.21"
sp-test-primitives = { version = "2.0.0", path = "../../test-primitives" }

[features]
default = []
