[package]
name = "frame-remote-externalities"
version = "0.17.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "An externalities provided environment that can load itself from remote nodes or cached files"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
log = "0.4.17"
serde = "1.0.136"
frame-support = { version = "9.0.0", optional = true, path = "../../../frame/support" }
sp-core = { version = "10.0.0", path = "../../../primitives/core" }
sp-io = { version = "11.0.0", path = "../../../primitives/io" }
sp-runtime = { version = "11.0.0", path = "../../../primitives/runtime" }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
substrate-rpc-client = { path = "../rpc/client" , version = "0.15.0" }
futures = "0.3"

[dev-dependencies]
frame-support = { version = "9.0.0", path = "../../../frame/support" }
pallet-elections-phragmen = { version = "10.0.0", path = "../../../frame/elections-phragmen" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[features]
remote-test = ["frame-support"]
