[package]
name = "substrate-state-trie-migration-rpc"
version = "9.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "Node-specific RPC methods for interaction with state trie migration."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
serde = { version = "1", features = ["derive"] }
log = { version = "0.4.17", default-features = false }

sp-core = { path = "../../../../primitives/core" , version = "10.0.0" }
sp-state-machine = { path = "../../../../primitives/state-machine" , version = "0.16.0" }
sp-trie = { path = "../../../../primitives/trie" , version = "10.0.0" }
trie-db = "0.24.0"

jsonrpsee = { version = "0.16.2", features = ["client-core", "server", "macros"] }

# Substrate Dependencies
sc-client-api = { version = "9.0.0", path = "../../../../client/api" }
sc-rpc-api = { version = "0.15.0", path = "../../../../client/rpc-api" }
sp-runtime = { version = "11.0.0", path = "../../../../primitives/runtime" }

[dev-dependencies]
serde_json = "1"
